# zenow

./: .gitignore  CLAUDE.md  KNOWLEDGE_BASE_BACKEND.md  README.md  package-lock.json  package.json
Q_A/: problem.md
backend/: .env.example  config.py  example_minio.py  main.py  pyproject.toml  test_download_progress.py  test_minio.py
backend/data/db/: config.db  zenow.db
backend/routers/: __init__.py  chat.py  knowledge_base.py  models.py  sessions.py  system.py
backend/spacemit_llm/: __init__.py
backend/spacemit_llm/comon/: minio.py
backend/spacemit_llm/comon/sqlite/: sqlit_kb.py
backend/spacemit_llm/model/: embed.py  llm.py  server_manager.py
backend/spacemit_llm/pipeline/: backend_exit.py  backend_start.py  chat.py  model_param_change.py  model_select.py
backend/src/: config.py  main.py
backend/src/comon/sqlite/: sqlite_base.py  sqlite_config.py  sqlite_session.py
backend/src/model/: download.py  llm.py  rerank.py  server_manager.py
backend/src/pipeline/: __init__.py  backend_exit.py  backend_start.py  model_select.py
backend/src/utils/: token_estimator.py
backend/tests/: backend_exit_test.py  llm_test.py  model_select_test.py
backend/utils/: port.py
create_env/: install_llama_server.sh
docs/: download-progress-api.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/electron/: main.ts  preload.ts
frontend/src/: App.css  (+3 more)
scripts/: clean_cache.sh  kill_llama_servers.sh  kill_port.sh
spec/: api-easy.md  api.md  backend.md  frontend.md  system.md
trash/: main.py  main_old.py
(+41 files in other folders)
